bug squashing

--- a/public/css/media-styles.css
+++ b/public/css/media-styles.css
@@ -201,7 +201,7 @@
 
 @media (min-width: 768px) {
   .main-bottom-section {
-    max-width: 520px;
+    max-width: 560px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -215,5 +215,11 @@
   .launch-collapsibles-row {
     flex-direction: row;
     align-items: flex-start;
+  }
+}
+
+@media (min-width: 768px) {
+  .launch-card {
+    max-width: 560px;
   }
 }
